--- a/popup.html
+++ b/popup.html
@@ -11,11 +11,17 @@
 </head>
 <body>
     <div class="graph">
-        <button type="button">Graph</button>
+        <a href = "graph.html">
+            <button type="button">Graph</button>
+        </a>
     </div>
     <div class="work_m">
-        <button type="button">Work Mode</button>
+        <div id = "work_mode">
+            <button type="button">Work Mode</button>
+        </div>
     </div>
+
+    <script src = "send.js"></script>
 
 </body>
 </html>
