update the the dictionary

--- a/graph.html
+++ b/graph.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Need this line inorder to import the google chart method -->
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href ="graph.css">
-    <title>Graphing</title>
+    <title>Document</title>
+    <script src = graph.js defer></script>
 </head>
 <body>
-    <div id="columnchart_values" class = "graph"></div>
-    <script src = "graph.js"></script>
+    <div id = "data_board"> Data board</div>
 </body>
 </html>
